# guessme-llm

./: README.md  pyproject.toml
src/guessme/: __init__.py  cli.py
static/: game.js  index.html
