[project]
name = "guessme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeffrey04", email = "mycyberpet@yahoo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dspy>=2.6.13",
    "fastapi[standard]>=0.115.8",
    "openai>=1.63.2",
    "websockets>=15.0",
]

[project.scripts]
guessme = "guessme:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
